[tool.poetry]
name = "univ3-test"
version = "0.1.0"
description = ""
authors = ["Seth <seth@powerloom.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^6.19.0"
eth-utils = "^4.1.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
